# VoxelCarvingWithRoboticArm

./: .gitignore  CMakeLists.txt  README.md  alberto_test.json  red_block.json  squirrel.json
ar_images/ar_11.txtar_11/: image_1  image_10  image_11  image_12  image_13  image_14  image_15  image_16  image_17  image_18  image_19  image_2  image_20  image_21  image_22  image_23  image_24  image_25  image_26  image_27  image_28  image_29  image_3  image_30  image_31  image_32  image_4  image_5  image_6  image_7  image_8  image_9
ar_images/ar_3/: poses.txt
ar_images/blue_and_red_disks/: image_21  image_22  image_23  image_24  image_25  image_26  image_27  image_28  image_29  image_30  image_31  image_32  image_33  image_34  image_35  image_36  image_37  image_38  image_39  image_40  image_41  image_42  image_43  image_44  image_45  image_46  image_47  image_48  image_49  image_50  image_51  image_52  image_53  image_54  image_55  image_56  image_57  image_58  image_59  image_60  (+11 more)
ar_images/red_block/: image_39
assets/red_block/: .mtl  poses.txt
assets/red_block_AR/: poses.txt
data/: ar_1.txt  around_X.csv  around_X.txt  hello.csv  prova.txt  red_block.csv  red_block_correct_pose.txt  red_block_correct_pose_2.txt  red_block_vertical.txt  speriamo.txt  use_this.txt
notebooks/: VoxelCarving.ipynb  VoxelSegmentation.ipynb  visualizations.ipynb
scripts/: cameraPoseVisualizer.py  imageSaver.py  test.py
src/: common.h  main.cpp  main8.c__  main_redblock.c__  original_code.c__  rendering.h  voxel_carving.h  voxel_colouring.h
voxel_carving/: CMakeLists.txt
(+330 files in other folders)
